# XRVessels

./: .gitignore  CMakeLists.txt  Makefile
Orbiter/Meshes/DG-XR1/: deltaglider-xr1.msh  deltaglidercockpit-xr1.msh
XRVessels/DeltaGliderXR1/: DeltaGliderXR1Prefs.cfg
XRVessels/DeltaGliderXR1/DeltaGliderXR1/: Bitmaps.h  DeltaGliderXR1.cpp  DeltaGliderXR1_ED.cpp  XR1Globals.cpp
XRVessels/DeltaGliderXR1/XR1Lib/: DeltaGliderXR1.h  DeltaGliderXR1_DMGApply.cpp  DeltaGliderXR1_DMGCheck.cpp  DeltaGliderXR1_IO.cpp  DeltaGliderXR1_VC.cpp  SecondaryHUDData.h  SubclassPreSteps.cpp  TextBox.cpp  TextBox.h  XR1AngularDataComponent.cpp  XR1AngularDataComponent.h  XR1Animations.cpp  XR1Areas.cpp  XR1Areas.h  XR1AreasBars.cpp  XR1AreasButtons.cpp  XR1AreasGauges.cpp  XR1AreasLEDs.cpp  XR1AreasNumbers.cpp  XR1AreasSwitches.cpp  XR1Component.h  XR1ConfigFileParser.cpp  XR1ConfigFileParser.h  XR1EngineDisplayComponent.h  XR1FuelDisplayComponent.h  XR1Globals.h  XR1HUD.cpp  XR1HUD.h  XR1InstrumentPanels.cpp  XR1InstrumentPanels.h  XR1Keys.cpp  XR1LowerPanelAreas.cpp  XR1LowerPanelAreas.h  XR1LowerPanelComponents.cpp  XR1MDAAirspeedHoldMode.cpp  XR1MDAAttitudeHoldMode.cpp  XR1MDADescentHoldMode.cpp  XR1MDAHullTempsMode.cpp  XR1MDAReentryCheckMode.cpp  XR1MDASystermStatusMode.cpp  (+48 more)
XRVessels/XR2Ravenstar/XR2Ravenstar/: Bitmaps.h  XR2Animations.cpp  XR2Animations.cpp.new_compression  XR2Animations.cpp.no_movement  XR2Areas.h  XR2Components.cpp  XR2Components.h  XR2ConfigFileParser.h  XR2Globals.cpp  XR2Globals.h  XR2InstrumentPanels.cpp  XR2InstrumentPanels.h  XR2Keys.cpp  XR2PayloadScreenAreas.cpp  XR2Ravenstar.cpp  XR2Ravenstar.h  XR2Ravenstar_DMG.cpp  XR2Ravenstar_ED.cpp  XR2Ravenstar_IO.cpp  XR2Ravenstar_VC.cpp  XR2StartupCallbacks.cpp  XR2VCInstrumentPanels.cpp  XR2VesselCallbacks.cpp  xr2payloadbay.cpp
XRVessels/XR3Phoenix/XR3Phoenix/: XR3Animations.cpp  XR3Globals.h  XR3Keys.cpp  XR3PayloadBay.cpp  XR3PayloadScreenAreas.cpp  XR3Phoenix.cpp  XR3Phoenix.h  XR3Phoenix_DMG.cpp  XR3StartupCallbacks.cpp
XRVessels/XR5Vanguard/XR5Vanguard/: Bitmaps.h  XR5Animations.cpp  XR5Areas.cpp  XR5Areas.h  XR5Components.cpp  XR5Components.h  XR5ConfigFileParser.h  XR5Globals.cpp  XR5Globals.h  XR5InstrumentPanels.cpp  XR5InstrumentPanels.h  XR5Keys.cpp  XR5PayloadScreenAreas.cpp  XR5StartupCallbacks.cpp  XR5Vanguard.cpp  XR5Vanguard.h  XR5Vanguard_DMG.cpp  XR5Vanguard_ED.cpp  XR5Vanguard_IO.cpp  XR5VesselCallbacks.cpp  xr5payloadbay.cpp
XRVessels/XRVesselCtrlDemo/: ParserTreeNode.cpp  XRVCClient.cpp  XRVCClientCommandParser.cpp  XRVCMainDialog.cpp  XRVCScriptThread.cpp  XRVesselCtrlDemo.cpp
XRVessels/framework/framework/: Area.cpp  Area.h  AreaGroup.cpp  AreaGroup.h  Component.h  ConfigFileParser.cpp  ConfigFileParserMacros.h  FileList.cpp  InstrumentPanel.cpp  InstrumentPanel.h  PrePostStep.h  RegKeyManager.cpp  RegKeyManager.h  RollingArray.h  Vessel3Ext.cpp  Vessel3Ext.h  VesselConfigFileParser.cpp  XRGrappleTargetVessel.cpp  XRPayload.cpp  XRPayload.h  XRPayloadBay.h  XRPayloadBaySlot.cpp  XRPayloadBaySlot.h  XRTemplates.h  XRVesselCtrl.h  stringhasher.h  xrpayloadbay.cpp
